--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,23 @@ $colorBlack: black;
   align-items: center;
 }
 
+@mixin button-animation{
+  animation-name: button-animation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes button-animation {
+  25%{
+    transform: scale(1.1);
+  }
+
+  75%{
+    transform: scale(0.9);
+  }
+}
+
 body {
   max-width: 3000px;
   margin: 0 auto;
@@ -386,17 +403,148 @@ body {
     position: relative;
     left: 45%;
 
-  
-
     &:hover{
-      background-color: white;
-      transform: translateY(-30%);
-      transition: 0.8s all ease;
+      @include button-animation();
     }
-}
-      
+ }
 
-  .red{
+ .backgroundCover{
+   background-image: url("https://www.awardmortgage.com.au/wp-content/uploads/2019/10/20191031163749.jpg");
+   background-size: auto;
+   z-index: 50;
+    @media screen and (min-width: 1025px){
+      background-attachment: fixed;
+    }
+
+    p{
+      &::selection{
+        background-color: var(--secondary-color);
+      }
+  
+      &::-moz-selection{
+        background-color: var(--secondary-color);
+      }
+  
+      &::-webkit-selection{
+        background-color: var(--secondary-color);
+      }  
+    }
+
+    .coverShadow-layout{
+       height: 100%;
+       background-color: black;
+       opacity: 0.6;
+      z-index: 100;
+    }
+    
+
+    .elementor-container{
+      min-height:800px; 
+      padding: 20px;
+      z-index: 200;
+      color: var(--primary-color);
+      font-family: Ubuntu, 方正黑体简体, "Open Sans", Helvetica, Arial, sans-serif;;
+
+        .travelName{
+          @include flex-centre();
+          font-size: 45px;
+          font-weight: 900;
+          margin-top: 5rem;
+        }
+
+        .travelIntroduction{
+          margin: 0 25%;
+
+        p{
+          line-height: 2rem;
+          font-weight: 100;
+          font-size: 1.5rem;
+          text-align: justify;
+
+          & ::selection{
+            background-color: var(--secondary-color);
+          }
+          
+          & ::-moz-selection{
+            background-color: var(--secondary-color);
+          }
+
+          & ::-webkit-selection{
+            background-color: var(--secondary-color);
+          }
+
+        }
+
+          & :not(:first-child){
+          margin-top: 2rem;
+      }
+
+      }
+    }
+
+    .travelIntroStatics-section{
+       width: 100%;
+
+       .statics-container{
+         max-width: 80%;
+         margin: 0 15%;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+
+         .statics{
+           display: flex;
+           flex-direction: column;
+
+           .first{
+             color: white;
+             font-weight: 500;
+             text-align: center;
+             font-size: 4rem;
+             margin: 0.5rem auto !important;
+           }
+
+           .last{
+            color: var(--secondary-color);
+            font-weight: bold;
+            text-align: center;
+            font-size: 2rem;
+            margin: 0 auto !important;
+           }
+         }
+       }
+    }
+
+
+
+    .findButton{
+      // @include flex-centre();
+      border-radius: 10px;
+      border: none;
+      font-weight:  600;
+      font-size: 1.5rem;
+      padding: 15px 80px;
+      text-transform: uppercase;
+      background-color: var(--secondary-color);
+      margin: 6rem 0;
+      cursor: pointer;
+      position: relative;
+      left: 45%;
+
+      &:hover{
+        @include button-animation();
+      }
+    }
+ }
+
+
+ .cover-section{
+   position: relative;
+ }
+
+
+      
+.red{
      color:var(--secondary-color)    
   }
 
