--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --secondary-color: #ff0000;
   --primary-color: white;
   --grey-color: #a09a9a;
+  --maxWidth: 100%;
 }
 
 * {
@@ -511,6 +512,100 @@ body {
 }
 
 .backgroundCover .findButton:hover {
+  animation-name: button-animation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.serviceDescription {
+  width: 85%;
+  margin: 3.5rem auto;
+}
+
+.serviceDescription p {
+  font-size: 45px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.serviceDescription span {
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.serviceBar {
+  width: 50%;
+  margin: 3.5rem auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.serviceOption {
+  position: relative;
+  display: inline-block;
+  margin: 2rem;
+  max-width: 250px;
+}
+
+.serviceOption a {
+  text-decoration: none;
+  color: #363636;
+}
+
+.serviceOption img {
+  filter: brightness(60%) contrast(100%) saturate(100%) blur(0px) hue-rotate(0deg);
+  transition-duration: 0.5s;
+  border-radius: 25px 25px 25px 25px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  width: 100%;
+}
+
+.serviceOption img:hover {
+  filter: brightness(100%) contrast(100%) saturate(100%) blur(0px) hue-rotate(0deg);
+}
+
+.serviceOption .image-caption {
+  color: var(--primary-color);
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 2.5rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.serviceOption .caption-position {
+  position: absolute;
+  top: 37%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+
+.InfoButton {
+  border-radius: 10px;
+  border: none;
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: 20px 30px;
+  text-transform: uppercase;
+  background-color: var(--secondary-color);
+  margin: 6rem 0;
+  cursor: pointer;
+  position: relative;
+  left: 45%;
+}
+
+.InfoButton:hover {
   animation-name: button-animation;
   animation-duration: 1s;
   animation-timing-function: linear;
