--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,7 @@ $colorBlack: black;
   --secondary-color: #ff0000;
   --primary-color: white;
   --grey-color: rgb(160, 154, 154);
+  --maxWidth: 100%;
 }
 
 * {
@@ -537,15 +538,105 @@ body {
     }
  }
 
+ .serviceDescription{
+   width: 85%;
+  //  margin-top: 3.5rem;
+   margin: 3.5rem auto;
+
+
+   p{
+      font-size: 45px;
+      font-weight: 900;
+      @include flex-centre();
+   }
+
+   span{
+    text-align: left;
+    @include flex-centre();
+    font-weight: 400;
+    font-size: 1.2rem;
+   }
+ }
+
+ .serviceBar{
+  width: 50%;
+  //  margin-top: 3.5rem;
+   margin: 3.5rem auto;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
+   align-content: space-between;
+ }
+
+ .serviceOption{
+        position: relative;
+        display:inline-block;
+        margin: 2rem;
+        max-width: 250px;
+    
+      a{
+        text-decoration:none;
+        color:rgb(54, 54, 54);
+   
+      }
+
+      img{
+        filter: brightness( 60% ) contrast( 100% ) saturate( 100% ) blur( 0px ) hue-rotate( 0deg );
+        transition-duration: 0.5s;
+        border-radius: 25px 25px 25px 25px;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+        width: 100%;
+        &:hover{
+          filter: brightness( 100% ) contrast( 100% ) saturate( 100% ) blur( 0px ) hue-rotate( 0deg );
+        }
+
+      }
+
+      .image-caption{
+        color: var(--primary-color);
+        font-size: 2rem;
+        font-weight:900;
+        line-height: 2.5rem;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+      }
+
+      .caption-position{
+         position: absolute;
+         top: 37%;
+         left: 50%;
+         transform: translateX(-50%);
+         text-align: center;
+      }
+ }
+
+ .InfoButton{
+  border-radius: 10px;
+  border: none;
+  font-weight:  600;
+  font-size: 1.5rem;
+  padding: 20px 30px;
+  text-transform: uppercase;
+  background-color: var(--secondary-color);
+  margin: 6rem 0;
+  cursor: pointer;
+  position: relative;
+  left: 45%;
+  &:hover{
+    @include button-animation();
+  }
+ }
+
 
  .cover-section{
-   position: relative;
+    position: relative;
  }
 
 
       
 .red{
-     color:var(--secondary-color)    
+     color:var(--secondary-color);
   }
 
 
