--- a/css/style.css
+++ b/css/style.css
@@ -518,12 +518,17 @@ body {
   animation-iteration-count: infinite;
 }
 
-.serviceDescription {
-  width: 85%;
-  margin: 3.5rem auto;
+.service-section {
+  width: 100%;
+  margin-top: 10rem;
 }
 
-.serviceDescription p {
+.service-section .serviceDescription {
+  max-width: 85%;
+  margin: 8rem auto 3.5rem auto;
+}
+
+.service-section .serviceDescription p {
   font-size: 45px;
   font-weight: 900;
   display: flex;
@@ -531,7 +536,7 @@ body {
   align-items: center;
 }
 
-.serviceDescription span {
+.service-section .serviceDescription span {
   text-align: left;
   display: flex;
   justify-content: center;
@@ -540,8 +545,8 @@ body {
   font-size: 1.2rem;
 }
 
-.serviceBar {
-  width: 50%;
+.service-section .serviceBar {
+  max-width: 1000px;
   margin: 3.5rem auto;
   display: flex;
   justify-content: space-between;
@@ -550,31 +555,31 @@ body {
   align-content: space-between;
 }
 
-.serviceOption {
+.service-section .serviceOption {
   position: relative;
   display: inline-block;
   margin: 2rem;
   max-width: 250px;
 }
 
-.serviceOption a {
+.service-section .serviceOption a {
   text-decoration: none;
   color: #363636;
 }
 
-.serviceOption img {
+.service-section .serviceOption img {
   filter: brightness(60%) contrast(100%) saturate(100%) blur(0px) hue-rotate(0deg);
   transition-duration: 0.5s;
   border-radius: 25px 25px 25px 25px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: #363636 0px 0px 10px;
   width: 100%;
 }
 
-.serviceOption img:hover {
+.service-section .serviceOption img:hover {
   filter: brightness(100%) contrast(100%) saturate(100%) blur(0px) hue-rotate(0deg);
 }
 
-.serviceOption .image-caption {
+.service-section .serviceOption .image-caption {
   color: var(--primary-color);
   font-size: 2rem;
   font-weight: 900;
@@ -583,7 +588,7 @@ body {
   text-transform: uppercase;
 }
 
-.serviceOption .caption-position {
+.service-section .serviceOption .caption-position {
   position: absolute;
   top: 37%;
   left: 50%;
@@ -591,10 +596,11 @@ body {
   text-align: center;
 }
 
-.InfoButton {
+.service-section .InfoButton {
   border-radius: 10px;
   border: none;
-  font-weight: 600;
+  font-weight: 200;
+  color: var(--primary-color);
   font-size: 1.5rem;
   padding: 20px 30px;
   text-transform: uppercase;
@@ -605,7 +611,7 @@ body {
   left: 45%;
 }
 
-.InfoButton:hover {
+.service-section .InfoButton:hover {
   animation-name: button-animation;
   animation-duration: 1s;
   animation-timing-function: linear;
@@ -618,4 +624,353 @@ body {
 
 .red {
   color: var(--secondary-color);
+}
+
+.expert {
+  width: 100%;
+  font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+}
+
+.expert .expertContainer {
+  width: 100%;
+  background-color: var(--secondary-color);
+  min-height: 250px;
+}
+
+.expert .expertContainer .expert-content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto 3rem auto;
+  max-width: 70%;
+}
+
+.expert .expertContainer p {
+  font-weight: 900;
+  font-size: 4rem;
+}
+
+.expert .expertContainer .contactDetail {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.expert .expertContainer .contactDetail .talkToUs {
+  border-radius: 10px;
+  border: none;
+  color: var(--secondary-color);
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: 1.5rem 2.5rem;
+  text-transform: uppercase;
+  background-color: black;
+  margin: 1rem 0;
+  margin-top: 3rem !important;
+}
+
+.expert .expertContainer .contactDetail .talkToUs:hover {
+  animation-name: button-animation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.expert .expertContainer .contactDetail span {
+  margin: 0.5rem 0;
+  font-weight: 600;
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.expert .expertContainer .contactDetail .bi {
+  margin-right: 8px;
+}
+
+.whyTravel {
+  width: 100%;
+  background-color: #f2f2f2;
+  min-height: 1400px;
+  font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+}
+
+.whyTravel .travelReason {
+  max-width: 80%;
+  margin: 0 auto;
+  padding-top: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.whyTravel .travelReason p {
+  font-size: 45px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.whyTravel .travelReason span {
+  text-align: left;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.whyTravel .travelReason iframe {
+  margin-top: 3rem;
+  box-shadow: #363636 0px 0px 10px;
+}
+
+.steps-to-find {
+  width: 100%;
+  background-color: var(--primary-color);
+  min-height: 950px;
+}
+
+.steps-to-find .step-container {
+  max-width: 85%;
+  margin: 8rem auto 3.5rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.steps-to-find .step-container .steps-title {
+  font-size: 45px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.steps-to-find .step-container .stepItem-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.steps-to-find .step-container .stepItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 4rem;
+}
+
+.steps-to-find .step-container .stepItem img {
+  width: 350px;
+  height: auto;
+}
+
+.steps-to-find .step-container .stepItem .item-description {
+  font-weight: 400;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: var(--grey-color);
+  font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+}
+
+.steps-to-find .step-container button {
+  border-radius: 10px;
+  border: none;
+  font-weight: 200;
+  color: var(--primary-color);
+  font-size: 1.5rem;
+  padding: 20px 30px;
+  text-transform: uppercase;
+  background-color: var(--secondary-color);
+  margin: 6rem 0;
+  cursor: pointer;
+}
+
+.steps-to-find .step-container button:hover {
+  animation-name: button-animation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.contactForm {
+  width: 100%;
+}
+
+.contactForm .formContainer {
+  position: relative;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.contactForm .up-section {
+  grid-row: 1/2;
+  background-color: var(--secondary-color);
+  min-height: 500px;
+  z-index: 1;
+}
+
+.contactForm .down-section {
+  grid-row: 2/3;
+  min-height: 500px;
+  z-index: 1;
+}
+
+.contactForm .form-to-contact {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  grid-row: 1/3;
+  background-color: var(--primary-color);
+  z-index: 100;
+  min-height: 800px;
+  min-width: 60%;
+  box-shadow: #363636 0px 0px 10px;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 20% 1fr;
+}
+
+.contactForm .form-to-contact .form-contact-us {
+  grid-column: 1/3;
+  grid-row: 1;
+  text-align: center;
+  text-decoration: underline;
+  font-size: 2.5rem;
+  font-weight: 200;
+  color: var(--secondary-color);
+  text-decoration-color: var(--secondary-color);
+  /* 控制下划线颜色 */
+  text-underline-offset: 25px;
+}
+
+.contactForm .form-to-contact .left-section {
+  width: 80%;
+  grid-column: 1/2;
+  grid-row: 2;
+  margin: 0 auto;
+}
+
+.contactForm .form-to-contact .left-section h1 {
+  font-size: 2.5rem;
+}
+
+.contactForm .form-to-contact .left-section .contact-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.contactForm .form-to-contact .left-section .contact-list li {
+  margin: 1.6rem 0;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.contactForm .form-to-contact .left-section .contact-list li .bi-telephone-fill {
+  color: var(--secondary-color);
+}
+
+.contactForm .form-to-contact .left-section .contact-list li .bi-envelope-fill {
+  color: var(--secondary-color);
+}
+
+.contactForm .form-to-contact .left-section .contact-list li .bi-geo-alt-fill {
+  color: var(--secondary-color);
+}
+
+.contactForm .form-to-contact .left-section .contact-list li span {
+  font-size: 1.6rem;
+  color: var(--grey-color);
+  margin-left: 20px;
+  text-align: left;
+}
+
+.contactForm .form-to-contact .right-section {
+  grid-column: 2/3;
+  grid-row: 2;
+}
+
+.contactForm .form-to-contact .right-section .contactForm {
+  list-style-type: none;
+  padding: 0;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li {
+  margin: 1.6rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li span {
+  font-size: 1.5rem;
+  color: #666363;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li .text-input {
+  margin-top: 3px;
+  padding: 0;
+  width: 80%;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  background-color: #d6d4d47a;
+  font-size: 20px;
+  color: black;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li .text-input:focus {
+  outline: none;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li .mySelect {
+  margin-top: 3px;
+  padding: 0;
+  width: 80%;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  background-color: #d6d4d47a;
+  font-size: 20px;
+  color: black;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li .mySelect:focus {
+  outline: none;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li .equiry {
+  margin-top: 3px;
+  padding: 0;
+  width: 80%;
+  height: 120px;
+  border-radius: 10px;
+  border: none;
+  background-color: #d6d4d47a;
+  font-size: 20px;
+  color: black;
+}
+
+.contactForm .form-to-contact .right-section .contactForm li .equiry:focus {
+  outline: none;
+}
+
+.contactForm .form-to-contact .right-section button {
+  border-radius: 10px;
+  border: none;
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: 15px 180px;
+  text-transform: uppercase;
+  background-color: var(--secondary-color);
+  cursor: pointer;
+  color: var(--primary-color);
+}
+
+.contactForm .form-to-contact .right-section button:hover {
+  animation-name: button-animation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
