--- a/css/style.scss
+++ b/css/style.scss
@@ -932,6 +932,13 @@ body {
       grid-column: 2/3;
       grid-row: 2;
       // @include flex-column();
+
+      .right-title{
+       color:var(--secondary-color);
+       font-size: 1.5rem;
+       font-weight: 600;
+      }
+
       .contactForm{
         list-style-type: none;
         padding:0;
@@ -1002,7 +1009,7 @@ body {
         border: none;
         font-weight:  600;
         font-size: 1.5rem;
-        padding: 15px 180px;
+        padding: 15px 4em;
         text-transform: uppercase;
         background-color: var(--secondary-color);
         cursor: pointer;
