--- a/css/style.scss
+++ b/css/style.scss
@@ -47,181 +47,179 @@ body {
   font-family: barlow, sans-serif;
 }
 
-.header-section{
-  max-width: 3000px;
-  width: 100%;
-}
+// .header-section{
+//   max-width: 3000px;
+//   width: 100%;
+// }
 
-.navbar{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--primary-color);
-  min-height: 80px;
-  box-shadow: rgb(54, 54, 54) 0px 0px 10px;
+// .navbar{
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background-color: var(--primary-color);
+//   min-height: 80px;
+//   box-shadow: rgb(54, 54, 54) 0px 0px 10px;
 
-    .container{
-      margin: 0 auto;
-      padding:0 10px;
-      min-width: 60%;
-      max-width: 90%;
-    }
+//     .container{
+//       margin: 0 auto;
+//       padding:0 10px;
+//       min-width: 60%;
+//       max-width: 90%;
+//     }
 
-    .site-logo{
-      position: relative;
-      float: left;
-      margin-top: 1.5rem;
-      cursor: pointer;
-       & a{
-        text-decoration: none;
-        color: var(--primary-color);
-       }
+//     .site-logo{
+//       position: relative;
+//       float: left;
+//       margin-top: 1.5rem;
+//       cursor: pointer;
+//        & a{
+//         text-decoration: none;
+//         color: var(--primary-color);
+//        }
 
-       & img{
-         border: 0;
-         max-width: 300px;
-         margin: auto 0px;
-       }
+//        & img{
+//          border: 0;
+//          max-width: 300px;
+//          margin: auto 0px;
+//        }
 
-    }
- }
+//     }
+//  }
 
- .barLink{
-   width: calc(60% - 15rem);
-   font-weight:800;
-   font-size: 1.5rem;
-   position: relative;
-   float: right;
-   text-transform: capitalize;
-   display: flex;
-   justify-content: end;
-   align-items: center;
+//  .barLink{
+//    width: calc(60% - 15rem);
+//    font-weight:800;
+//    font-size: 1.5rem;
+//    position: relative;
+//    float: right;
+//    text-transform: capitalize;
+//    display: flex;
+//    justify-content: end;
+//    align-items: center;
 
-   & .barLinkList{
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
+//    & .barLinkList{
+//       list-style: none;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       height: 100%;
 
-     & li{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+//      & li{
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
         
-        &:hover{
-          text-decoration: underline;
-          text-decoration-color: var(--secondary-color);
-          text-underline-offset: 35px;
-        }
+//         &:hover{
+//           text-decoration: underline;
+//           text-decoration-color: var(--secondary-color);
+//           text-underline-offset: 35px;
+//         }
 
-       }
+//        }
 
-     .chosen{
-      text-decoration: underline;
-      text-decoration-color: var(--secondary-color);
-      text-underline-offset: 35px;
-    }
-   }
-    .barLinkListItem {
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+//      .chosen{
+//       text-decoration: underline;
+//       text-decoration-color: var(--secondary-color);
+//       text-underline-offset: 35px;
+//     }
+//    }
+//     .barLinkListItem {
+//       height: 100%;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
 
-      & a{
-        text-decoration: none;
-        color:$colorBlack;
-        margin: 0.5rem;
-        font-size: 1.5rem;
-        padding: 0 0.3rem;
-        font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
-        font-weight: normal;
+//       & a{
+//         text-decoration: none;
+//         color:$colorBlack;
+//         margin: 0.5rem;
+//         font-size: 1.5rem;
+//         padding: 0 0.3rem;
+//         font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+//         font-weight: normal;
         
-         &:hover{
-          color: grey;
-          transition: 0.7s all ease;
+//          &:hover{
+//           color: grey;
+//           transition: 0.7s all ease;
   
-         }
-      }
-    }
+//          }
+//       }
+//     }
 
 
- }
+//  }
 
- .navDropdownListItem{
-   position: relative;
-   height: 100%;
-   &:hover{
-     background-color: var(--secondary-color);
-     transition: 1s all;
-   }
+//  .navDropdownListItem{
+//    position: relative;
+//    height: 100%;
+//    &:hover{
+//      background-color: var(--secondary-color);
+//      transition: 1s all;
+//    }
 
-  .navLanguage{
-    text-decoration: none;
-    color:$colorBlack;
-    margin: 0.5rem;
-    font-size: 1.5rem;
-    padding: 0 0.3rem;
-    font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
-    font-weight: normal;
+//   .navLanguage{
+//     text-decoration: none;
+//     color:$colorBlack;
+//     margin: 0.5rem;
+//     font-size: 1.5rem;
+//     padding: 0 0.3rem;
+//     font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+//     font-weight: normal;
 
-    &:hover{
-       color: var(--primary-color);
-       opacity: 1 !important;
-       transition: 1s all;
-       text-decoration: none !important;
-    }
-  } 
- }
+//     &:hover{
+//        color: var(--primary-color);
+//        opacity: 1 !important;
+//        transition: 1s all;
+//        text-decoration: none !important;
+//     }
+//   } 
+//  }
 
- .navDropdownList{
-   display: none;
-   position: absolute;
-   width:30rem;
-   top: 2.8rem;
-   left: 0rem;
-   padding-inline-start: 0;
-   & li {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--secondary-color);
-    max-width: 15rem;
-    border: 1px solid var(--primary-color);
+//  .navDropdownList{
+//    display: none;
+//    position: absolute;
+//    width:30rem;
+//    top: 2.8rem;
+//    left: 0rem;
+//    padding-inline-start: 0;
+//    & li {
+//     display: flex;
+//     flex-direction: column;
+//     background-color: var(--secondary-color);
+//     max-width: 15rem;
+//     border: 1px solid var(--primary-color);
 
-    &:hover{
-        text-decoration: none !important;
+//     &:hover{
+//         text-decoration: none !important;
 
-    }
+//     }
 
-    & a {
-      text-decoration: none;
-      color:$colorBlack;
-      font-size: 1rem;
-      padding: 0.5rem 0;
-      border-bottom: 1px solid var(--secondary-color);
-      color: aliceblue;
-    }
-  }
+//     & a {
+//       text-decoration: none;
+//       color:$colorBlack;
+//       font-size: 1rem;
+//       padding: 0.5rem 0;
+//       border-bottom: 1px solid var(--secondary-color);
+//       color: aliceblue;
+//     }
+//   }
  
-  &.activated {
-    display: block;
-    transition: 1s all ease;
-  }
-}
+//   &.activated {
+//     display: block;
+//     transition: 1s all ease;
+//   }
+// }
 
-.fixed{
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 999;
-}
+// .fixed{
+//   position: fixed;
+//   top: 0;
+//   width: 100%;
+//   z-index: 999;
+// }
 
 .mainPage{
   width: 100%;
 }
-
-
 
 .video-container-overlay{
   height: 40rem;
@@ -1028,77 +1026,77 @@ body {
 
 }
 
-.footer{
-  @include session-width();
-  background-color: black;
+// .footer{
+//   @include session-width();
+//   background-color: black;
 
 
-  .footer-area{
-    min-height:400px;
-    max-width: 100%;
-    // margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 70% 30%;
+//   .footer-area{
+//     min-height:400px;
+//     max-width: 100%;
+//     // margin: 0 auto;
+//     display: grid;
+//     grid-template-columns: 1fr 3fr;
+//     grid-template-rows: 70% 30%;
 
 
-    .logo-layer{
+//     .logo-layer{
 
-      grid-column: 1;
-      grid-row: 1;
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-      align-items: center;
-      img{
-        border: 0;
-        max-width: 300px;
-        margin: 2rem 0px;
-      }
-    }
+//       grid-column: 1;
+//       grid-row: 1;
+//       display: flex;
+//       justify-content: space-between;
+//       flex-direction: column;
+//       align-items: center;
+//       img{
+//         border: 0;
+//         max-width: 300px;
+//         margin: 2rem 0px;
+//       }
+//     }
 
-    .footerBar{
-      grid-column: 2/3;
-      grid-row: 1;
-      width: 80%;
-      margin: 3rem auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+//     .footerBar{
+//       grid-column: 2/3;
+//       grid-row: 1;
+//       width: 80%;
+//       margin: 3rem auto;
+//       display: flex;
+//       justify-content: space-between;
+//       align-items: center;
 
 
-       a{
-        color: #FFF;
-        text-decoration: none;
+//        a{
+//         color: #FFF;
+//         text-decoration: none;
 
-         span{
-          font-size: 1.8rem;
-         }
-       }
-    }
+//          span{
+//           font-size: 1.8rem;
+//          }
+//        }
+//     }
 
-    .abn{
-    grid-column: 1/3;
-    grid-row: 2;
-      p{
-        font-weight: 200;
-        font-size:20px;
-        color:var(--secondary-color);
-        text-align: center;
-        // line-height: 20px;
+//     .abn{
+//     grid-column: 1/3;
+//     grid-row: 2;
+//       p{
+//         font-weight: 200;
+//         font-size:20px;
+//         color:var(--secondary-color);
+//         text-align: center;
+//         // line-height: 20px;
         
-      }
+//       }
 
-      .abn1{
-        margin: 2rem auto 5px auto;
-      }
+//       .abn1{
+//         margin: 2rem auto 5px auto;
+//       }
 
-      .abn2{
-        margin: 0 auto;
-      }
-    }
-  }
-}
+//       .abn2{
+//         margin: 0 auto;
+//       }
+//     }
+//   }
+// }
 
 
 
