--- a/css/about.scss
+++ b/css/about.scss
@@ -3,7 +3,7 @@ $colorwht: white;
 
 :root {
   font-size: 16px;
-  --secondary-color: #ff0000;
+  --secondary-color: #EC0024;
   --primary-color: white;
   --grey-color: rgb(160, 154, 154);
   --maxWidth: 100%;
@@ -156,6 +156,7 @@ body {
   margin: 3rem auto 10rem auto;
   position: relative;
   left: 45%;
+  cursor: pointer;
 
   &:hover{
      text-decoration: underline;
