--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 :root {
   font-size: 16px;
-  --secondary-color: #ff0000;
+  --secondary-color: #EC0024;
   --primary-color: white;
   --grey-color: #a09a9a;
   --maxWidth: 100%;
