--- a/css/footer.scss
+++ b/css/footer.scss
@@ -2,7 +2,7 @@ $colorBlack: black;
 
 :root {
   font-size: 16px;
-  --secondary-color: #ff0000;
+  --secondary-color: #EC0024;
   --primary-color: white;
   --grey-color: rgb(160, 154, 154);
   --maxWidth: 100%;
