--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 :root {
   font-size: 16px;
-  --secondary-color: #ff0000;
+  --secondary-color: #EC0024;
   --primary-color: white;
   --grey-color: #a09a9a;
   --maxWidth: 100%;
@@ -29,6 +29,173 @@ body {
 
 .mainSection {
   width: 100%;
+}
+
+.contact-image-section {
+  margin: 0;
+  margin-top: 6rem;
+  width: 100%;
+  height: 37.5rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  color: white;
+}
+
+.contact-image-section .contact-image-container {
+  z-index: 1;
+  margin: 0 10rem 10rem 0;
+}
+
+.contact-image-section h2 {
+  color: white;
+  font-size: 3.5rem;
+  margin: 0;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+}
+
+.contact-image-section h2 span {
+  color: var(--secondary-color);
+}
+
+.contact-image-section::before {
+  background-color: rgba(0, 0, 0, 0.53);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  content: "";
+  z-index: 0;
+}
+
+.contact-pictureLink {
+  background-image: url(https://awardmortgage.com.au/wp-content/uploads/2019/11/20191126100751.jpg);
+}
+
+.contactSection {
+  width: 100%;
+}
+
+.contactSection .contactsContainer {
+  width: 75%;
+  margin: 10rem auto;
+  min-height: 500px;
+  font-size: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+}
+
+.contactSection .contactsContainer .title {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: var(--secondary-color);
+  text-decoration: underline;
+  text-underline-offset: 30px;
+  font-size: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+  text-align: center;
+}
+
+.contactSection .contactsContainer .contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 4rem 0;
+}
+
+.contactSection .contactsContainer .contact iframe {
+  box-shadow: #363636 0px 0px 10px;
+}
+
+.contactSection .contactsContainer .contact .contactType {
+  font-size: 2.5rem;
+  font-weight: 600;
+  position: relative;
+}
+
+.contactSection .contactsContainer .contact .contactType::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 5px;
+  /* 你可以调整这个值来控制“宽度” */
+  background-color: var(--secondary-color);
+  width: 60%;
+}
+
+.contactSection .contactsContainer .contact .address {
+  font-size: 1.7rem;
+  font-weight: 200;
+}
+
+.contactSection .contactsContainer .contact .contact-table {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 1rem;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 2fr;
+  min-height: 15rem;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter .spanStyle {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: Ubuntu, 方正黑体简体, "Open Sans", Helvetica, Arial, sans-serif;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter .grid-item-1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter .grid-item-2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter .grid-item-3 {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter .grid-item-4 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter .spanStyle-body {
+  color: var(--primary-color);
+  font-size: 1.5rem;
+  font-weight: 300;
+  font-family: Ubuntu, 方正黑体简体, "Open Sans", Helvetica, Arial, sans-serif;
+}
+
+.contactSection .contactsContainer .contact .contact-table .tableSorter .table-body {
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 5rem;
 }
 
 .contactForm {
