--- a/css/header.scss
+++ b/css/header.scss
@@ -1,44 +1,44 @@
 $colorBlack: black;
 
-:root {
-  font-size: 16px;
-  --secondary-color: #EC0024;
-  --primary-color: white;
-  --grey-color: rgb(160, 154, 154);
-  --maxWidth: 100%;
-}
+// :root {
+//   font-size: 16px;
+//   --secondary-color: #EC0024;
+//   --primary-color: white;
+//   --grey-color: rgb(160, 154, 154);
+//   --maxWidth: 100%;
+// }
 
-* {
-  box-sizing: border-box;
-}
+// * {
+//   box-sizing: border-box;
+// }
 
-@mixin flex-centre{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+// @mixin flex-centre{
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-@mixin button-animation{
-  animation-name: button-animation;
-  animation-duration: 1s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
+// @mixin button-animation{
+//   animation-name: button-animation;
+//   animation-duration: 1s;
+//   animation-timing-function: linear;
+//   animation-iteration-count: infinite;
+// }
 
-@mixin session-width{
-  width: 100%;
-}
+// @mixin session-width{
+//   width: 100%;
+// }
 
 
-@keyframes button-animation {
-  25%{
-    transform: scale(1.1);
-  }
+// @keyframes button-animation {
+//   25%{
+//     transform: scale(1.1);
+//   }
 
-  75%{
-    transform: scale(0.9);
-  }
-}
+//   75%{
+//     transform: scale(0.9);
+//   }
+// }
 
 .header-section{
   max-width: 3000px;
