added travel page

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -150,7 +150,7 @@ body {
           bottom: 0;
           left: 0;
           right: 0;
-          height: 5px; /* 你可以调整这个值来控制“宽度” */
+          height: 5px; 
           background-color: var(--secondary-color);
           width: 60%;
         }
