--- a/css/travel.css
+++ b/css/travel.css
@@ -284,20 +284,182 @@ body {
   background-image: url(https://awardmortgage.com.au/wp-content/uploads/2019/11/20191120141324.jpg);
 }
 
-.Aboutus {
+.news-intro {
   width: 70%;
   font-size: 1.5rem;
   padding: 2rem;
-  color: var(--grey-color);
-  margin: auto;
+  margin: 5rem auto;
   line-height: 2rem;
   letter-spacing: 0.1rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.Aboutus span {
+.news-intro span {
   text-align: left !important;
+}
+
+.news-intro .gap {
+  flex-grow: 1;
+  width: 10%;
+}
+
+.news-intro .news {
+  flex-grow: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.news-intro .news h1 {
+  text-transform: capitalize;
+}
+
+.news-intro .news span {
+  font-size: 18px;
+}
+
+.news-intro .news-image-container {
+  flex-grow: 2;
+}
+
+.news-intro .news-image-container img {
+  height: auto;
+  max-width: 70%;
+  box-shadow: 1px 1px 3px;
+}
+
+.news-detail {
+  margin: 10rem 0;
+}
+
+.news-detail h1 {
+  text-align: center;
+  width: 100%;
+  font-size: 2.5rem;
+  text-transform: capitalize;
+}
+
+.news-detail .news-list {
+  max-width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.news-detail .news-list .contactContainer {
+  margin-top: 20px;
+  width: 25%;
+  border-radius: 45px;
+  background-color: #e3e3e3;
+  padding: 10px 35px 35px 35px;
+  font-family: "Open Sans", 方正黑体简体, "Open Sans", Helvetica, Arial, sans-serif;
+}
+
+.news-detail .news-list .contactContainer h2 {
+  color: var(--secondary-color);
+  font-size: 35px;
+  position: relative;
+  text-transform: capitalize;
+  line-height: 5rem;
+}
+
+.news-detail .news-list .contactContainer h2::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background-color: var(--secondary-color);
+  width: 40%;
+}
+
+.what-can-help {
+  width: 100%;
+  background-color: var(--secondary-color);
+  min-height: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.what-can-help .step-container {
+  width: 85%;
+  margin: 3.5rem auto 10rem auto;
+}
+
+.what-can-help .step-container .steps-title {
+  font-size: 45px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.what-can-help .step-container .stepItem-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.what-can-help .step-container .stepItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 4rem;
+}
+
+.what-can-help .step-container .stepItem img {
+  width: 200px;
+  height: auto;
+}
+
+.what-can-help .step-container .stepItem .item-description {
+  font-weight: 600;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: var(--primary-color);
+  font-family: "Libre Franklin", Arial, "Microsoft YaHei", 微软雅黑, STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif !important;
+}
+
+.what-can-help .step-container .stepItem span {
+  text-align: start;
+  color: var(--primary-color);
+  padding: 10px 0px 10px 30px;
+  font-weight: 200;
+  line-height: 1.7rem;
+  font-size: 1.3rem;
+}
+
+.advertisement {
+  margin: 6rem auto;
+  min-height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 80%;
+}
+
+.advertisement .advertisement-content {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 4fr;
+  column-gap: 20px;
+}
+
+.advertisement .advertisement-content .content-1 {
+  grid-row: 1/3;
+  grid-column: 1/2;
+}
+
+.advertisement .advertisement-content .content-2 {
+  grid-row: 1/3;
+  grid-column: 2/3;
 }
