--- a/css/travel.scss
+++ b/css/travel.scss
@@ -497,6 +497,18 @@ body {
   align-items: flex-start;
   width: 80%;
 
+    & h2{
+      font-size: 1.8rem;
+      color: #4a0812;
+    }
+
+    & h1{
+      font-size: 2rem;
+      color: var(--secondary-color);
+    }
+
+
+
   .advertisement-content{
     width: 100%;
     display: grid;
@@ -504,13 +516,25 @@ body {
     grid-template-rows: 1fr 4fr;
     column-gap: 20px;
 
+    & h3{
+      font-size: 1.5rem;
+      color: #4a0812;
+    }
+
+    & p{
+      font-size: 1.2rem;
+      color: darkgray;
+    }
+
 
     .content-1{
+      max-width: 85%;
       grid-row: 1/3;
       grid-column: 1/2;
     }
 
     .content-2{
+      max-width: 85%;
       grid-row: 1/3;
       grid-column: 2/3;
     }
