--- a/css/header.css
+++ b/css/header.css
@@ -8,9 +8,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--primary-color);
+  background-color: white;
   min-height: 80px;
   box-shadow: #363636 0px 0px 10px;
+  backdrop-filter: blur(20px);
+  transition: all 0.3s;
 }
 
 .navbar .container {
@@ -18,6 +20,7 @@
   padding: 0 10px;
   min-width: 60%;
   max-width: 90%;
+  z-index: 1000;
 }
 
 .navbar .site-logo {
@@ -123,6 +126,16 @@
   opacity: 1 !important;
   transition: 1s all;
   text-decoration: none !important;
+}
+
+.navDropdownListItem .navLanguage img {
+  border: none;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  max-width: 15%;
+  height: auto;
+  image-rendering: optimizeQuality;
 }
 
 .navDropdownList {
