--- a/css/header.scss
+++ b/css/header.scss
@@ -1,63 +1,30 @@
 $colorBlack: black;
 
-// :root {
-//   font-size: 16px;
-//   --secondary-color: #EC0024;
-//   --primary-color: white;
-//   --grey-color: rgb(160, 154, 154);
-//   --maxWidth: 100%;
-// }
-
-// * {
-//   box-sizing: border-box;
-// }
-
-// @mixin flex-centre{
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
-
-// @mixin button-animation{
-//   animation-name: button-animation;
-//   animation-duration: 1s;
-//   animation-timing-function: linear;
-//   animation-iteration-count: infinite;
-// }
-
-// @mixin session-width{
-//   width: 100%;
-// }
-
-
-// @keyframes button-animation {
-//   25%{
-//     transform: scale(1.1);
-//   }
-
-//   75%{
-//     transform: scale(0.9);
-//   }
-// }
-
 .header-section{
   max-width: 3000px;
   width: 100%;
+  // opacity: 0.2;
+  // z-index: -1;
 }
+
+
 
 .navbar{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--primary-color);
+  background-color: white;
   min-height: 80px;
   box-shadow: rgb(54, 54, 54) 0px 0px 10px;
+  backdrop-filter: blur(20px);
+  transition: all 0.3s;
 
     .container{
       margin: 0 auto;
       padding:0 10px;
       min-width: 60%;
       max-width: 90%;
+      z-index: 1000;
     }
 
     .site-logo{
@@ -164,6 +131,16 @@ $colorBlack: black;
        opacity: 1 !important;
        transition: 1s all;
        text-decoration: none !important;
+    }
+
+    img{
+      border: none;
+      padding: 0;
+      margin: 0;
+      display: inline-block;
+      max-width: 15%;
+      height: auto;
+      image-rendering: optimizeQuality;
     }
   } 
  }
